--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [{ "src": "/(.*)", "dest": "/" }],
   "builds":[{
-    "src":"./index.js",
+    "src":"./index.mjs",
     "use":"@vercel/node"
   }]
 }
